--- a/finetune/ft_brq_timit.yaml
+++ b/finetune/ft_brq_timit.yaml
@@ -10,7 +10,7 @@ seed: 1000
 __set_seed: !apply:torch.manual_seed [!ref <seed>]
 output_folder: !ref results/ft/<seed>
 output_wer_folder: !ref <output_folder>/
-save_folder: !ref <output_folder>/save_ft_timit
+save_folder: !ref <output_folder>/save
 train_log: !ref <output_folder>/train_log.txt
 
 pt_model_hub: !PLACEHOLDER
